--- a/Practice-projects/news-application/client/package.json
+++ b/Practice-projects/news-application/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
+    "start": "next start",
     "build": "next build"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.15",
+    "axios": "^1.3.4",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
